compiler/tests-spec/testData/diagnostics/linked/expressions/constant-literals/real-literals/p-3/pos/1.1.kt
/*
 * KOTLIN DIAGNOSTICS SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 3 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Simple real literals with omitted a whole-number part.
 */

// TESTCASE NUMBER: 1
konst konstue_1 = .0

// TESTCASE NUMBER: 2
konst konstue_2 = .00

// TESTCASE NUMBER: 3
konst konstue_3 = .000

// TESTCASE NUMBER: 4
konst konstue_4 = .0000

// TESTCASE NUMBER: 5
konst konstue_5 = .1234567890

// TESTCASE NUMBER: 6
konst konstue_6 = .23456789

// TESTCASE NUMBER: 7
konst konstue_7 = .345678

// TESTCASE NUMBER: 8
konst konstue_8 = .4567

// TESTCASE NUMBER: 9
konst konstue_9 = .56

// TESTCASE NUMBER: 10
konst konstue_10 = .65

// TESTCASE NUMBER: 11
konst konstue_11 = .7654

// TESTCASE NUMBER: 12
konst konstue_12 = .876543

// TESTCASE NUMBER: 13
konst konstue_13 = .98765432

// TESTCASE NUMBER: 14
konst konstue_14 = .0987654321

// TESTCASE NUMBER: 15
konst konstue_15 = .1111

// TESTCASE NUMBER: 16
konst konstue_16 = .22222

// TESTCASE NUMBER: 17
konst konstue_17 = .33333

// TESTCASE NUMBER: 18
konst konstue_18 = .444444

// TESTCASE NUMBER: 19
konst konstue_19 = .5555555

// TESTCASE NUMBER: 20
konst konstue_20 = .66666666

// TESTCASE NUMBER: 21
konst konstue_21 = .777777777

// TESTCASE NUMBER: 22
konst konstue_22 = .8888888888

// TESTCASE NUMBER: 23
konst konstue_23 = .99999999999

// TESTCASE NUMBER: 24
konst konstue_24 = .00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001

// TESTCASE NUMBER: 25
konst konstue_25 = <!FLOAT_LITERAL_CONFORMS_ZERO!>.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001<!>

// TESTCASE NUMBER: 26
konst konstue_26 = .0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000123456789012345678901234567890123456789012345678901234567890

// TESTCASE NUMBER: 27
konst konstue_27 = .44444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444441

// TESTCASE NUMBER: 28
konst konstue_28 = .777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777777771

// TESTCASE NUMBER: 29
konst konstue_29 = .9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999123456789912345678991234567899123456789912345678991234567899
